heading with sr-only class added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <title>Frontend Mentor | Testimonials section (Built with grid)</title>
   </head>
   <body>
-    <div class="container">
+    <main class="container">
+      <h1 class="sr-only">Testimonials section</h1>
       <figure class="testimonial testimonial--violet testimonial--l">
         <div class="testimonial__user">
           <img
@@ -144,6 +145,6 @@
           developer after receiving multiple offers. 100% recommend! ”
         </blockquote>
       </figure>
-    </div>
+    </main>
   </body>
 </html>
