--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
     <main class="container">
       <h1 class="sr-only">Testimonials section</h1>
       <figure class="testimonial testimonial--violet testimonial--l">
-        <div class="testimonial__user">
+        <figcaption class="testimonial__user">
           <img
             src="./images/image-daniel.jpg"
             alt="Daniel Clifford profile picture"
             class="user__img user__img--border-gray"
           />
-          <figcaption>
+          <div>
             <p class="user__name">Daniel Clifford</p>
             <p class="user__role">Verified Graduate</p>
-          </figcaption>
-        </div>
+          </div>
+        </figcaption>
         <blockquote class="testimonial__quote">
           I received a job offer mid-course, and the subjects I learned were
           current, if not more so, in the company I joined. I honestly feel I
@@ -50,17 +50,17 @@
         </blockquote>
       </figure>
       <figure class="testimonial testimonial--gray">
-        <div class="testimonial__user">
+        <figcaption class="testimonial__user">
           <img
             src="./images/image-jonathan.jpg"
             alt="Jonathan Walters profile picture"
             class="user__img"
           />
-          <figcaption>
+          <div>
             <p class="user__name">Jonathan Walters</p>
             <p class="user__role">Verified Graduate</p>
-          </figcaption>
-        </div>
+          </div>
+        </figcaption>
         <blockquote class="testimonial__quote">
           The team was very supportive and kept me motivated
         </blockquote>
@@ -71,17 +71,17 @@
         </blockquote>
       </figure>
       <figure class="testimonial testimonial--white">
-        <div class="testimonial__user">
+        <figcaption class="testimonial__user">
           <img
             src="./images/image-jeanette.jpg"
             alt="Jeanette Harmon profile picture"
             class="user__img"
           />
-          <figcaption>
+          <div>
             <p class="user__name">Jeanette Harmon</p>
             <p class="user__role">Verified Graduate</p>
-          </figcaption>
-        </div>
+          </div>
+        </figcaption>
         <blockquote class="testimonial__quote">
           An overall wonderful and rewarding experience
         </blockquote>
@@ -91,17 +91,17 @@
         </blockquote>
       </figure>
       <figure class="testimonial testimonial--dark testimonial--l">
-        <div class="testimonial__user">
+        <figcaption class="testimonial__user">
           <img
             src="./images/image-patrick.jpg"
             alt="Patrick Abrams profile picture"
             class="user__img user__img--border-violet"
           />
-          <figcaption>
+          <div>
             <p class="user__name">Patrick Abrams</p>
             <p class="user__role">Verified Graduate</p>
-          </figcaption>
-        </div>
+          </d>
+        </figcaption>
         <blockquote class="testimonial__quote">
           Awesome teaching support from TAs who did the bootcamp themselves.
           Getting guidance from them and learning from their experiences was
@@ -117,17 +117,17 @@
         </blockquote>
       </figure>
       <figure class="testimonial testimonial--white">
-        <div class="testimonial__user">
+        <figcaption class="testimonial__user">
           <img
             src="./images/image-kira.jpg"
             alt="Kira Whittle profile picture"
             class="user__img"
           />
-          <figcaption>
+          <div>
             <p class="user__name">Kira Whittle</p>
             <p class="user__role">Verified Graduate</p>
-          </figcaption>
-        </div>
+          </div>
+        </figcaption>
         <blockquote class="testimonial__quote">
           Such a life-changing experience. Highly recommended!
         </blockquote>
